Upgrade Java to 21 and enable preview features